--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4814,8 +4814,8 @@ button {
   align-items: center;
 }
 .cid-tknKqNHO7L {
-  padding-top: 225px;
-  padding-bottom: 225px;
+  padding-top: 135px;
+  padding-bottom: 90px;
   background-image: url("../../../assets/images/pexels-gustavo-fring-4173241-5760x3840.jpg");
 }
 .cid-tknKqNHO7L .mbr-section-title {
@@ -4828,6 +4828,9 @@ button {
   .cid-tknKqNHO7L .align-center {
     text-align: center;
   }
+}
+.cid-tknKqNHO7L H1 {
+  color: #fedb01;
 }
 .cid-tknRs0hKkY {
   padding-top: 3rem;
@@ -4937,10 +4940,22 @@ button {
 .cid-tknOQ0jHys .card_text {
   color: #ffffff;
 }
+#custom-html-8j {
+  /* Type valid CSS here */
+}
+#custom-html-8j div {
+  padding: 80px 0;
+  color: #777;
+  text-align: center;
+}
+#custom-html-8j p {
+  font-size: 60px;
+  color: #777;
+}
 .cid-tko4abUjUc {
   padding-top: 2rem;
   padding-bottom: 0rem;
-  background-color: #ffffff;
+  background-color: #f7f7f7;
 }
 .cid-tko4abUjUc .mbr-section-subtitle {
   color: #8c8c95;
@@ -4962,22 +4977,10 @@ button {
 .cid-tko4abUjUc .wrapper {
   margin: auto;
 }
-#custom-html-8f {
-  /* Type valid CSS here */
-}
-#custom-html-8f div {
-  padding: 80px 0;
-  color: #777;
-  text-align: center;
-}
-#custom-html-8f p {
-  font-size: 60px;
-  color: #777;
-}
 .cid-tknAzXSwEX {
   padding-top: 1rem;
-  padding-bottom: 0rem;
-  background-color: #ffffff;
+  padding-bottom: 5rem;
+  background-color: #f7f7f7;
 }
 .cid-tknAzXSwEX .mbr-iconfont {
   font-size: 1.4rem !important;
@@ -5036,47 +5039,6 @@ button {
   height: 100%;
   position: absolute;
   top: 0;
-}
-.cid-tko3pz9XAE {
-  padding-top: 0rem;
-  padding-bottom: 3rem;
-  background-color: #ffffff;
-}
-.cid-tko3pz9XAE .mbr-section-title {
-  margin-bottom: 24px;
-  line-height: 1.171em;
-  color: #14142b;
-  display: inline-block;
-}
-.cid-tko3pz9XAE .mbr-text {
-  color: #8c8c95;
-  margin-bottom: 26px;
-  text-align: center;
-  max-width: 739px;
-  margin: auto;
-}
-.cid-tko3pz9XAE .button-align {
-  text-align: center;
-}
-.cid-tko3pz9XAE .margin {
-  margin-right: 14px;
-}
-.cid-tko3pz9XAE .mbr-section-btn {
-  display: block;
-}
-@media (max-width: 440px) {
-  .cid-tko3pz9XAE .margin {
-    margin-right: 0px;
-  }
-  .cid-tko3pz9XAE .b {
-    margin-bottom: 20px;
-  }
-}
-.cid-tko3pz9XAE .btn {
-  margin-top: 20px;
-}
-.cid-tko3pz9XAE a.btn > span {
-  margin-left: 0.5rem;
 }
 .cid-tjZ5wCaUe7 {
   z-index: 1000;
