--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5513,6 +5513,119 @@ button {
 .cid-tjZ5wCaUe7 a.btn > span {
   margin-left: 0.5rem;
 }
+.cid-tkKMpgnaHI {
+  padding-top: 3rem;
+  padding-bottom: 6rem;
+  background-color: #000000;
+}
+.cid-tkKMpgnaHI .row {
+  flex-direction: row-reverse;
+}
+.cid-tkKMpgnaHI .row {
+  align-items: center;
+}
+.cid-tkKMpgnaHI .image-wrapper {
+  padding: 0 1rem;
+}
+@media (max-width: 991px) {
+  .cid-tkKMpgnaHI .image-wrapper {
+    padding: 0 0.75rem;
+  }
+}
+.cid-tkKMpgnaHI .text-wrapper {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  padding: 30px 0 0;
+}
+@media (min-width: 992px) {
+  .cid-tkKMpgnaHI .text-wrapper {
+    padding: 0 0 0 60px;
+    padding: 0 60px 0 0 ;
+  }
+}
+.cid-tkKMpgnaHI .text-container {
+  display: flex;
+  flex-direction: column;
+}
+@media (max-width: 991px) {
+  .cid-tkKMpgnaHI .text-container {
+    width: 550px;
+    flex-shrink: 1;
+  }
+}
+.cid-tkKMpgnaHI .label-text {
+  width: 100%;
+  color: #ffde59;
+  margin-bottom: 4px;
+}
+.cid-tkKMpgnaHI .mbr-section-title {
+  margin-bottom: 12px;
+  color: #ffffff;
+}
+.cid-tkKMpgnaHI .mbr-text {
+  color: #555555;
+  width: 100%;
+  margin-bottom: 32px;
+}
+.cid-tkKMpgnaHI .item {
+  display: flex;
+  align-items: center;
+  margin: 0 0 10px;
+  flex-wrap: wrap;
+}
+.cid-tkKMpgnaHI .mbr-section-subtitle {
+  margin: 0;
+  width: 100%;
+}
+.cid-tkKMpgnaHI .numbers-container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+.cid-tkKMpgnaHI .number-wrap {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+.cid-tkKMpgnaHI .color-text {
+  color: #ffde59;
+}
+.cid-tkKMpgnaHI .text-box {
+  width: 100%;
+}
+.cid-tkKMpgnaHI .icon-text {
+  width: 100%;
+}
+.cid-tkKMpgnaHI .btn-container {
+  width: 100%;
+}
+@media (max-width: 575px) {
+  .cid-tkKMpgnaHI .mbr-section-btn {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .cid-tkKMpgnaHI .mbr-section-btn .btn {
+    width: 100%;
+  }
+}
+.cid-tkKMpgnaHI .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tkKMpgnaHI .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-tkKMpgnaHI .mbr-text,
+.cid-tkKMpgnaHI .mbr-section-btn {
+  color: #f7f7f7;
+}
 .cid-tjZ77MOo4x {
   padding-top: 30px;
   padding-bottom: 30px;
